--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@
 #
 #    pip-compile requirements.in
 #
-asgiref==3.8.1
+asgiref==3.9.1
     # via
     #   -r requirements.in
     #   django
 attrs==25.3.0
     # via -r requirements.in
-certifi==2025.6.15
+certifi==2025.7.14
     # via
     #   -r requirements.in
     #   requests
@@ -18,17 +18,18 @@ chardet==5.2.0
     # via -r requirements.in
 charset-normalizer==3.4.2
     # via requests
-dj-database-url==3.0.0
+dj-database-url==3.0.1
     # via
     #   -r requirements.in
     #   django-heroku
-django==5.2.3
+django==5.2.4
     # via
     #   -r requirements.in
     #   dj-database-url
+    #   django-analytical
     #   django-extensions
     #   django-heroku
-django-analytical==3.1.0
+django-analytical==3.2.0
     # via -r requirements.in
 django-environ==0.12.0
     # via -r requirements.in
@@ -54,7 +55,7 @@ packaging==25.0
     # via
     #   gunicorn
     #   pytest
-pillow==11.2.1
+pillow==11.3.0
     # via -r requirements.in
 pluggy==1.6.0
     # via
@@ -74,7 +75,7 @@ python-dateutil==2.9.0.post0
     #   heroku3
 python-decouple==3.8
     # via -r requirements.in
-python-dotenv==1.1.0
+python-dotenv==1.1.1
     # via -r requirements.in
 pytz==2025.2
     # via -r requirements.in
@@ -90,8 +91,6 @@ sqlparse==0.5.3
     #   django
 toml==0.10.2
     # via -r requirements.in
-typing-extensions==4.14.0
-    # via dj-database-url
 urllib3==2.5.0
     # via
     #   -r requirements.in
